--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
- <h1>I'm kinda tired of finding out everything. If you find anything just tell me
-  <h3>Please allow popups on this page to launch Interstellar.</h3>I'm so sleepy rn</a>
+ <h1>I'm kinda tired of finding out everything. If you find anything just tell me. I'm so sleepy rn.
+  <h3>Please allow popups on this page to launch Interstellar.</h3>
   <script src="cloakinnewtab.js"></script>
 </body>
 
