--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
  <h1>I'm kinda tired of finding out everything. If you find anything just tell me. I'm so sleepy rn.
   <h3>Please allow popups on this page to launch Interstellar.</h3>
+   This cloaks your tab so the teachers can't see it on netref. It also hides it from your history. It will work as long as you allow popups.
+   If your interested on how this works or anything about it really, just come and talk to me.
   <script src="cloakinnewtab.js"></script>
 </body>
 
